--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.2",
     "next": "10.0.5",
+    "path": "^0.12.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
